[iOS] User agent string incorrectly says "iPhone" instead of "iPad" on newer iPads https://bugs.webkit.org/show_bug.cgi?id=174182 <rdar://problem/32868369>

Reviewed by Tim Horton.

In deviceNameForUserAgent() on iOS, we were forcefully returning "iPhone" if
[UIApplication _isClassic] returns true. Update check to return "iPad" if
[UIApplication _isClassic] returns true but [UIApplication _classMode] returns
UIApplicationSceneClassicModeOriginalPad.

* page/ios/UserAgentIOS.mm:
(WebCore::isClassicPad):
(WebCore::isClassicPhone):
(WebCore::osNameForUserAgent):
(WebCore::deviceNameForUserAgent):
* platform/spi/ios/UIKitSPI.h:


Canonical link: https://commits.webkit.org/191022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219177 268f45cc-cd09-0410-ab3c-d52691b4dbfc